--- a/css/layout.css
+++ b/css/layout.css
@@ -10,6 +10,7 @@ header ul li.selected a{color:#fff;}
 .wall{width: 82%;margin: 0 auto;padding-top:40px;border: 1px solid #eee;color:#666666;box-shadow: 0 1px 2px rgba(0,0,0,.15)}
 .nav_font{font-size: 28px;line-height: 30px;background-color: #F5F5F5;border-bottom: 1px solid #D6D6D6;padding: 20px;}
 .content_part{font-size:14px; padding: 20px;background-color: #fff;}
+.cross_line{height: 30px;}
 .content_part a{color:#0069d6;}
 .content_part a:hover{color: #00438a;text-decoration: underline;}
 
