--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -40,9 +40,9 @@
 			})
 			// stretch the background wall to the whole screen
 			if( $(document).height() > $(window).height()){
-				$('.bg').height($(document).height())
+				$('.bg').height($(document).height());
 			}else{
-				$('.bg').height($(window).height())
+				$('.bg').height($(window).height());
 			}
 		})
 	</script>
