--- a/css/layout.css
+++ b/css/layout.css
@@ -14,4 +14,4 @@ header ul li.selected a{color:#fff;}
 .content_part a{color:#0069d6;}
 .content_part a:hover{color: #00438a;text-decoration: underline;}
 
-footer{text-align:center;color:#404040;margin:20px 0;}
+footer{text-align:center;color:#404040;padding:20px 0;}
