--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -23,6 +23,12 @@
 			<h1>{{ page.title }}</h1>
 		</section>
 		<section class="content_part">
+			<p class="pub_time">>> {{ page.date | date_to_string }}</p>
+			<ul class="blog_tag">
+				{% for tag in page.tags %}
+				<li class="{{ tag }}">{{ tag }}</li>
+				{% endfor %}
+			</ul>
 			{{ content }}
 			<p class="cross_line"></p>
 			<!-- Disqus start -->
@@ -46,7 +52,7 @@
 	<footer>
 		<p>© Nemo 2014 with help of Jekyll</p>
 	</footer>
-	<script type="text/javascript" src="js/jquery-1.8.3.min.js"></script>
+	<script type="text/javascript" src="{{ site.baseurl }}/js/jquery-1.8.3.min.js"></script>
 	<script type="text/javascript">
 		$(function(){
 			$('header ul li').removeClass('selected');
@@ -56,9 +62,7 @@
 				}
 			})
 			// stretch the background wall to the whole screen
-			if( $(document).height() > $(window).height()){
-				$('.bg').height($(document).height())
-			}else{
+			if( $('body').height() < $(window).height()){
 				$('.bg').height($(window).height())
 			}
 		})
