--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -19,10 +19,10 @@
 		</ul>
 	</header>
 	<section class="wall">
-		<section class="nav_font">
+		<section class="syn_padding nav_font">
 			<h1>{{ page.title }}</h1>
 		</section>
-		<section class="content_part">
+		<section class="syn_padding content_part">
 			{{ content }}
 		</section>
 	</section>
