--- a/css/pages.css
+++ b/css/pages.css
@@ -5,6 +5,8 @@
 .orange{background-color:#f0ad4e; color:#fff;}
 .gray{background-color:#777; color:#fff;}
 
+.displayNone{display:none;}
+
 /* blog list */
 .blog_list{font-size:16px;margin:10px 0;}
 .article_list ul{margin-left: 35px;}
