--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -1,39 +1,41 @@
 ---
 layout: template
 ---
-<section class="content_part_left">
-	<p class="pub_time">>> {{ page.date | date_to_string }}</p>
-	<ul class="blog_tag">
-		{% for tag in page.tags %}
-		<li class="{{ tag }}">{{ tag }}</li>
-		{% endfor %}
-	</ul>
-	{{ content }}
-	<p class="cross_line"></p>
-	<!-- Disqus start -->
-	<div id="disqus_thread"></div>
-	<script type="text/javascript">
-		/* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-		var disqus_shortname = 'caesor'; // required: replace example with your forum shortname
+<section class="blog_layout"">
+	<section class="content_part_left">
+		<p class="pub_time">>> {{ page.date | date_to_string }}</p>
+		<ul class="blog_tag">
+			{% for tag in page.tags %}
+			<li class="{{ tag }}">{{ tag }}</li>
+			{% endfor %}
+		</ul>
+		{{ content }}
+		<p class="cross_line"></p>
+		<!-- Disqus start -->
+		<div id="disqus_thread"></div>
+		<script type="text/javascript">
+			/* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+			var disqus_shortname = 'caesor'; // required: replace example with your forum shortname
 
-		/* * * DON'T EDIT BELOW THIS LINE * * */
-		(function() {
-			var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-			dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-			(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-		})();
-	</script>
-	<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-	<a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
-	<!-- Disqus end -->
+			/* * * DON'T EDIT BELOW THIS LINE * * */
+			(function() {
+				var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+				dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+				(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+			})();
+		</script>
+		<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+		<a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+		<!-- Disqus end -->
+	</section>
+	<aside class="content_part_right">
+		<h3>Tags List</h3>
+		<ul>
+			{% for tag in site.tags %}      
+			<li>
+			<a href="tags.html#{{ tag | first | cgi_encode }}">{{ tag | first }} ({{tag.size}})</a>
+			</li>
+			{% endfor %}
+		</ul>
+	</aside>
 </section>
-<aside class="content_part_right">
-	<h3>Tags List</h3>
-	<ul>
-		{% for tag in site.tags %}      
-		<li>
-		<a href="tags.html#{{ tag | first | cgi_encode }}">{{ tag | first }} ({{tag.size}})</a>
-		</li>
-		{% endfor %}
-	</ul>
-</aside>
