--- a/css/layout.css
+++ b/css/layout.css
@@ -26,7 +26,7 @@ header ul li.selected a{color:#fff;}
 footer{position:absolute;bottom:0;width: 100%;text-align:center;color:#858585;line-height:40px;}
 
 @media screen and (max-width: 800px){
-	header ul{width:95%;overflow:hidden;margin:0 auto;}
-	.wall{width: 95%;margin: 0 auto;padding:40px 0;color:#666666;}
+	header ul, .wall{width:95%;}
+	.nav_font, .content_part{padding: 20px 10px;}
 	.content_part_right{display:none;}
 }
