--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -9,7 +9,9 @@ layout: template
 			<li class="{{ tag }}">{{ tag }}</li>
 			{% endfor %}
 		</ul>
-		{{ content }}
+		<section class="blog_content">
+			{{ content }}
+		</section>
 		<p class="cross_line"></p>
 		<!-- Disqus start -->
 		<div id="disqus_thread"></div>
