--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -6,6 +6,7 @@
   	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<meta name="keywords" content="" />
 	<meta name="description" content="" />
+	<link type="text/css" rel="stylesheet" href="{{ site.baseurl }}/resource/bootstrap-3.2.0-dist/css/bootstrap.min.css" />
 	<link type="text/css" rel="stylesheet" href="{{ site.baseurl }}/css/common.css">
 	<link type="text/css" rel="stylesheet" href="{{ site.baseurl }}/css/layout.css">
 	<link type="text/css" rel="stylesheet" href="{{ site.baseurl }}/css/pages.css">
@@ -16,6 +17,7 @@
 		<ul>
 			<li><a href="{{ site.baseurl }}/">Blog</a></li>
 			<li><a href="{{ site.baseurl }}/category.html">Category</a></li>
+			<li><a href="{{ site.baseurl }}/tag.html">Tag</a></li>
 			<li><a href="{{ site.baseurl }}/about.html">About</a></li>
 		</ul>
 	</header>
@@ -32,6 +34,7 @@
 	</footer>
 	<script type="text/javascript" src="{{ site.baseurl }}/js/jquery-1.8.3.min.js"></script>
 	<script type="text/javascript" src="{{ site.baseurl }}/resource/google-code-prettify/prettify.js"></script>
+	<script type="text/javascript" src="{{ site.baseurl }}/resource/bootstrap-3.2.0-dist/js/bootstrap.min.js"></script>
 	<script type="text/javascript">
 		$(function(){
 			$('code').addClass('prettyprint linenums').attr('style', 'overflow:auto');
