--- a/css/common.css
+++ b/css/common.css
@@ -30,8 +30,7 @@ article,aside,audio,bdi,canvas,command,datalist,details,figcaption,figure,footer
 
 html,body {background:#fff;font-family:"Microsoft YaHei",simSun,"Lucida Grande","Lucida Sans Unicode";font-size:14px;color:#000;line-height:24px;}
 
-a {color:#000;text-decoration:none;
-transition:all .3s ease-in;}
+a {color:#000;text-decoration:none;}
 a:hover {color:#d00;text-decoration:underline;}
 
 
