--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -15,7 +15,7 @@
 <body class="bg">
 	<header>
 		<ul>
-			<li><a href="{{ site.baseurl }}/">Blog</a></li>
+			<li><a href="{{ site.baseurl }}/">Archive</a></li>
 			<li><a href="{{ site.baseurl }}/category.html">Category</a></li>
 			<li><a href="{{ site.baseurl }}/tag.html">Tag</a></li>
 			<li><a href="{{ site.baseurl }}/about.html">About</a></li>
