--- a/css/pages.css
+++ b/css/pages.css
@@ -1,10 +1,4 @@
 /* common type */
-.blue{background-color:#428bca; color:#fff;}
-.red{background-color:#d9534f; color:#fff;}
-.green{background-color:#5cb85c; color:#fff;}
-.orange{background-color:#f0ad4e; color:#fff;}
-.gray{background-color:#777; color:#fff;}
-
 .displayNone{display:none;}
 
 /* blog list */
@@ -13,12 +7,11 @@
 .article_list ul li{list-style-type:disc;}
 
 /* blog */
-.pub_time{font-size:16px;color:#00438a;}
-.blog_info{padding-top: 10px;}
+.blog_info{padding: 10px 0;color:#00438a;}
 .blog_info .glyphicon{font-size: 12px;}
-.blog_info ul{display:inline-block;}
+.blog_info ul{display:inline-block;margin-right:20px;}
 .blog_info ul li{display:inline-block;padding-left:10px;}
-.blog_tag {margin-left:20px;}
+.blog_content h2{font-size:18px;font-weight:800;display: inline-block;background-color: #2295FF;color: #fff;padding: 0 20px;line-height:30px;margin: 5px 0;border-radius:14px 0;}
 .blog_content p{margin: 10px 0;}
 .blog_content img{max-width:100%;}
 
@@ -27,18 +20,18 @@
 .prettyprint ol{text-indent: 10px;border:1px solid #E6E6E6; border-radius: 5px;}
 /*.prettyprint ol li{list-style-type:decimal; list-style-position:inside;}*/
 
-/* category */
-
-
-/* tag */
-.tag_list{overflow:hidden;}
-.tag_list li{float: left;margin-right: 20px;border: 1px solid #eee;border-radius: 5px;background: #eee;}
-.tags_num{vertical-align: super;font-size:0.7em;}
-.tag_list li a{display: block;color:#1B1B1B;font-size:18px;padding: 0 20px;}
-.tag_list li a:hover{text-decoration:none;box-shadow: 0px 0px 15px #B6C5D6 inset;border-radius: 5px;}
+/* category & tag page */
 .post_title{font-size: 20px;margin: 20px 0 10px;}
 .post_list li{list-style-type: disc;margin-left: 15px;}
 .post_list span{float:right;}
+
+/* tag */
+.tag_list{overflow:hidden;}
+.tag_list li{float: left;margin-right: 20px;border: 1px solid #eee;border-radius: 5px;background: #eee;border: 1px solid #E9E9E9;}
+.tags_num{vertical-align: super;font-size:0.7em;}
+.tag_list li a{display: block;color:#1B1B1B;font-size:18px;padding: 0 20px;}
+.tag_list li a:hover{text-decoration:none;box-shadow: 0px 0px 15px #B6C5D6 inset;border-radius: 5px;}
+
 /* resume */
 .resume_head{background-color: #f5f5f5;}
 .resume_content{background-color: #fff;}
