update the blackboard

--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -6,9 +6,9 @@
   	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<meta name="keywords" content="" />
 	<meta name="description" content="" />
-	<link type="text/css" rel="stylesheet" href="{{ site.baseurl }}/css/common.css">
 	<link type="text/css" rel="stylesheet" href="{{ site.baseurl }}/resource/bootstrap-3.2.0-dist/css/bootstrap.min.css" />
 	<link type="text/css" rel="stylesheet" href="{{ site.baseurl }}/resource/font-awesome-4.2.0/css/font-awesome.min.css">
+	<link type="text/css" rel="stylesheet" href="{{ site.baseurl }}/css/common.css">
 	<link type="text/css" rel="stylesheet" href="{{ site.baseurl }}/css/layout.css">
 	<link type="text/css" rel="stylesheet" href="{{ site.baseurl }}/css/pages.css">
 	<link type="text/css" rel="stylesheet" href="{{ site.baseurl }}/resource/google-code-prettify/prettify.css" />
@@ -63,7 +63,7 @@
 			}
 			
 			$('#menu-trigger').click(function(){
-				$('.big_nav ul').slideToggle();
+				$('.hello_board').slideToggle();
 			})
 		})
 	</script>
