update the scroll top button

--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -29,7 +29,7 @@
 			</nav>
 		</section>
 		<nav class="small_nav">
-			<h3><i class="fa fa-star-o"></i>   Starry Sky</h3>
+			<h3>Blog</h3>
 			<i id="menu-trigger" class="fa fa-bars"></i>
 		</nav>
 	</header>
