--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -3,7 +3,7 @@
 <head>
 	<title>{{ page.title }}</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  	<meta name="viewport" content="width=device-width, initial-scale=1" />
+  	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 	<meta name="keywords" content="" />
 	<meta name="description" content="" />
 	<link type="text/css" rel="stylesheet" href="{{ site.baseurl }}/resource/bootstrap-3.2.0-dist/css/bootstrap.min.css" />
