--- a/css/layout.css
+++ b/css/layout.css
@@ -3,7 +3,7 @@ header ul, .wall{max-width:960px;width:82%;}
 .nav_font, .content_part{padding: 20px;}
 .content_part{padding-top:10px;}
 
-header{width: 100%; background-color: #464646;font-size: 14px;background:url('/resource/image/sky.jpg'); background-size:cover;}
+header{width: 100%; background-color: #464646;font-size: 14px;background:url('/resource/image/sky2.jpg'); background-size:cover;}
 header nav.big_nav{width:100%;background-color: #181818;position:fixed;top:0;}
 header ul{overflow:hidden;margin:0 auto;}
 header ul li{float:left;background:#181818;}
