--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -4,15 +4,15 @@ layout: template
 <section class="blog_layout"">
 	<section class="content_part_left">	
 		<section class="blog_info">
-			<ul class="pub_time"><span class="glyphicon glyphicon-time"></span><li>{{ page.date | date: '%y-%m-%d' }}</li></ul>
+			<ul class="pub_time"><i class="fa fa-calendar"></i><li>{{ page.date | date: '%y-%m-%d' }}</li></ul>
 			<ul class="blog_category">
-				<span class="glyphicon glyphicon-folder-open"></span>
+				<i class="fa fa-folder-open-o"></i>
 				{% for category in page.categories %}
 				<li>{{ category }}</li>
 				{% endfor %}
 			</ul>
 			<ul class="blog_tag">
-				<span class="glyphicon glyphicon-tags"></span>
+				<i class="fa fa-tags"></i>
 				{% for tag in page.tags %}
 				<li class="{{ tag }}">{{ tag }}</li>
 				{% endfor %}
