--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -4,8 +4,8 @@
 	<title>{{ page.title }}</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-	<meta name="keywords" content="" />
-	<meta name="description" content="" />
+	<meta name="keywords" content="blog" />
+	<meta name="description" content="sharing something leared from my life" />
 	<link type="text/css" rel="stylesheet" href="{{ site.baseurl }}/resource/bootstrap-3.2.0-dist/css/bootstrap.min.css" />
 	<link type="text/css" rel="stylesheet" href="{{ site.baseurl }}/resource/font-awesome-4.2.0/css/font-awesome.min.css">
 	<link type="text/css" rel="stylesheet" href="{{ site.baseurl }}/css/common.css">
