--- a/css/pages.css
+++ b/css/pages.css
@@ -12,7 +12,11 @@
 .blog_info ul li{display:inline-block;padding-left:10px;}
 .blog_content h2{font-size:18px;font-weight:800;display: inline-block;background-color: #2295FF;color: #fff;padding: 0 20px;line-height:30px;margin: 5px 0;border-radius:14px 0;}
 .blog_content p{margin: 10px 0;}
-.blog_content img{max-width:100%;}
+.blog_content img{max-width:90%;}
+.blog_content .pagination{display: inline-block;padding-left: 0;margin: 20px 0;border-radius: 4px;}
+.blog_content .pagination li{float: left;padding: 5px 10px;border: 1px solid #eee;}
+.blog_content .pagination li:hover{cursor: pointer;background: #fafafa;}
+.blog_content .pagination li a{text-decoration: none;}
 
 /* code in blog */
 .prettyprint{white-space:pre;white-space:pre-wrap;word-break:break-all;word-wrap:break-word;}
