optimize loading css file

--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -6,12 +6,7 @@
   	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 	<meta name="keywords" content="blog" />
 	<meta name="description" content="sharing something leared from my life" />
-	<link type="text/css" rel="stylesheet" href="{{ site.baseurl }}/resource/font-awesome-4.2.0/css/font-awesome.min.css">
-	<link type="text/css" rel="stylesheet" href="{{ site.baseurl }}/css/common.css">
-	<link type="text/css" rel="stylesheet" href="{{ site.baseurl }}/css/layout.css">
-	<link type="text/css" rel="stylesheet" href="{{ site.baseurl }}/css/pages.css">
-	<link type="text/css" rel="stylesheet" href="{{ site.baseurl }}/resource/google-code-prettify/prettify.css" />
-	
+	<link type="text/css" rel="stylesheet" href="{{ site.baseurl }}/resource/base.css">
 </head>
 <body class="bg">
 	<header>
@@ -48,7 +43,7 @@
 	<footer>
 		<p>© Nemo 2014 with help of Jekyll</p>
 	</footer>
-	<script type="text/javascript" src="{{ site.baseurl }}/js/jquery-1.8.3.min.js"></script>
+	<script type="text/javascript" src="{{ site.baseurl }}/resource/js/jquery-1.8.3.min.js"></script>
 	<script type="text/javascript" src="{{ site.baseurl }}/resource/google-code-prettify/prettify.js"></script>
 	<script type="text/javascript">
 		$(function(){
