update top config

--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -11,7 +11,7 @@
 <body class="bg">
 	<header>
 		<section class="hello_board">
-			<section class="head_pic_border"><img src="{{ site.baseurl }}/resource/image/head.jpg"></section>
+			<section class="head_pic_border"><img src="{{ site.imageurl }}/head.jpg"></section>
 			<article class="my_info">Nemo</article>
 			<nav class="big_nav">
 				<ul>
